--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.11",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-calendar": "^3.9.0",
